GB3-768: Fix bug that did not allow to click the map for info query underneath the invisible legend overlay. Slight restructuring of properties in legend-overlay and info-overlay for better readability

--- a/src/app/map/map-page.component.scss
+++ b/src/app/map/map-page.component.scss
@@ -24,7 +24,6 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: map-layout-variables.$map-overlay-width;
   }
 
   .map-container__all-map-items-container {
